// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ReactionButton /> snapshot should match snapshot 1`] = `
<ReactionButton>
  <ButtonCircle
    className="md-reaction-button-wrapper"
    data-reacted={false}
    size={32}
    stopPropagation={false}
    variant="tertiary"
  >
    <Button
      className="md-button-circle-wrapper md-reaction-button-wrapper"
      color="default"
      data-reacted={false}
      onClick={[Function]}
      onPointerDown={[Function]}
      onPointerUp={[Function]}
      size={32}
      variant="tertiary"
    >
      <mdc-button
        class="md-button-circle-wrapper md-reaction-button-wrapper"
        data-reacted={false}
        onPointerDown={[Function]}
        onPointerUp={[Function]}
        suppressHydrationWarning={true}
      >
        <Reaction
          name="haha"
        >
          <div
            className="md-reaction-wrapper md-icon-scales md-reaction-loading"
            data-scale={12}
          >
            <Animation
              data-name="haha"
              name="haha"
              onError={[Function]}
              onLoad={[Function]}
            >
              <mdc-animation
                data-name="haha"
                suppressHydrationWarning={true}
              />
            </Animation>
            <LoadingSpinner
              aria-hidden={true}
              scale={12}
              variant="button"
            >
              <div
                aria-hidden={true}
                className="md-loading-spinner-wrapper"
                role="img"
              >
                <Spinner
                  inverted={false}
                  style={
                    Object {
                      "--mdc-spinner-size": "0.75rem",
                    }
                  }
                  variant="button"
                >
                  <mdc-spinner
                    style={
                      Object {
                        "--mdc-spinner-size": "0.75rem",
                      }
                    }
                    suppressHydrationWarning={true}
                  />
                </Spinner>
              </div>
            </LoadingSpinner>
          </div>
        </Reaction>
      </mdc-button>
    </Button>
  </ButtonCircle>
</ReactionButton>
`;

exports[`<ReactionButton /> snapshot should match snapshot with className 1`] = `
<ReactionButton
  className="example-class"
>
  <ButtonCircle
    className="example-class md-reaction-button-wrapper"
    data-reacted={false}
    size={32}
    stopPropagation={false}
    variant="tertiary"
  >
    <Button
      className="md-button-circle-wrapper example-class md-reaction-button-wrapper"
      color="default"
      data-reacted={false}
      onClick={[Function]}
      onPointerDown={[Function]}
      onPointerUp={[Function]}
      size={32}
      variant="tertiary"
    >
      <mdc-button
        class="md-button-circle-wrapper example-class md-reaction-button-wrapper"
        data-reacted={false}
        onPointerDown={[Function]}
        onPointerUp={[Function]}
        suppressHydrationWarning={true}
      >
        <Reaction
          name="haha"
        >
          <div
            className="md-reaction-wrapper md-icon-scales md-reaction-loading"
            data-scale={12}
          >
            <Animation
              data-name="haha"
              name="haha"
              onError={[Function]}
              onLoad={[Function]}
            >
              <mdc-animation
                data-name="haha"
                suppressHydrationWarning={true}
              />
            </Animation>
            <LoadingSpinner
              aria-hidden={true}
              scale={12}
              variant="button"
            >
              <div
                aria-hidden={true}
                className="md-loading-spinner-wrapper"
                role="img"
              >
                <Spinner
                  inverted={false}
                  style={
                    Object {
                      "--mdc-spinner-size": "0.75rem",
                    }
                  }
                  variant="button"
                >
                  <mdc-spinner
                    style={
                      Object {
                        "--mdc-spinner-size": "0.75rem",
                      }
                    }
                    suppressHydrationWarning={true}
                  />
                </Spinner>
              </div>
            </LoadingSpinner>
          </div>
        </Reaction>
      </mdc-button>
    </Button>
  </ButtonCircle>
</ReactionButton>
`;

exports[`<ReactionButton /> snapshot should match snapshot with id 1`] = `
<ReactionButton
  id="example-id"
>
  <ButtonCircle
    className="md-reaction-button-wrapper"
    data-reacted={false}
    id="example-id"
    size={32}
    stopPropagation={false}
    variant="tertiary"
  >
    <Button
      className="md-button-circle-wrapper md-reaction-button-wrapper"
      color="default"
      data-reacted={false}
      id="example-id"
      onClick={[Function]}
      onPointerDown={[Function]}
      onPointerUp={[Function]}
      size={32}
      variant="tertiary"
    >
      <mdc-button
        class="md-button-circle-wrapper md-reaction-button-wrapper"
        data-reacted={false}
        onPointerDown={[Function]}
        onPointerUp={[Function]}
        suppressHydrationWarning={true}
      >
        <Reaction
          name="haha"
        >
          <div
            className="md-reaction-wrapper md-icon-scales md-reaction-loading"
            data-scale={12}
          >
            <Animation
              data-name="haha"
              name="haha"
              onError={[Function]}
              onLoad={[Function]}
            >
              <mdc-animation
                data-name="haha"
                suppressHydrationWarning={true}
              />
            </Animation>
            <LoadingSpinner
              aria-hidden={true}
              scale={12}
              variant="button"
            >
              <div
                aria-hidden={true}
                className="md-loading-spinner-wrapper"
                role="img"
              >
                <Spinner
                  inverted={false}
                  style={
                    Object {
                      "--mdc-spinner-size": "0.75rem",
                    }
                  }
                  variant="button"
                >
                  <mdc-spinner
                    style={
                      Object {
                        "--mdc-spinner-size": "0.75rem",
                      }
                    }
                    suppressHydrationWarning={true}
                  />
                </Spinner>
              </div>
            </LoadingSpinner>
          </div>
        </Reaction>
      </mdc-button>
    </Button>
  </ButtonCircle>
</ReactionButton>
`;

exports[`<ReactionButton /> snapshot should match snapshot with reacted 1`] = `
<ReactionButton
  reacted={true}
>
  <ButtonCircle
    className="md-reaction-button-wrapper"
    data-reacted={true}
    size={32}
    stopPropagation={false}
    variant="tertiary"
  >
    <Button
      className="md-button-circle-wrapper md-reaction-button-wrapper"
      color="default"
      data-reacted={true}
      onClick={[Function]}
      onPointerDown={[Function]}
      onPointerUp={[Function]}
      size={32}
      variant="tertiary"
    >
      <mdc-button
        class="md-button-circle-wrapper md-reaction-button-wrapper"
        data-reacted={true}
        onPointerDown={[Function]}
        onPointerUp={[Function]}
        suppressHydrationWarning={true}
      >
        <Reaction
          name="haha"
        >
          <div
            className="md-reaction-wrapper md-icon-scales md-reaction-loading"
            data-scale={12}
          >
            <Animation
              data-name="haha"
              name="haha"
              onError={[Function]}
              onLoad={[Function]}
            >
              <mdc-animation
                data-name="haha"
                suppressHydrationWarning={true}
              />
            </Animation>
            <LoadingSpinner
              aria-hidden={true}
              scale={12}
              variant="button"
            >
              <div
                aria-hidden={true}
                className="md-loading-spinner-wrapper"
                role="img"
              >
                <Spinner
                  inverted={false}
                  style={
                    Object {
                      "--mdc-spinner-size": "0.75rem",
                    }
                  }
                  variant="button"
                >
                  <mdc-spinner
                    style={
                      Object {
                        "--mdc-spinner-size": "0.75rem",
                      }
                    }
                    suppressHydrationWarning={true}
                  />
                </Spinner>
              </div>
            </LoadingSpinner>
          </div>
        </Reaction>
      </mdc-button>
    </Button>
  </ButtonCircle>
</ReactionButton>
`;

exports[`<ReactionButton /> snapshot should match snapshot with style 1`] = `
<ReactionButton
  style={
    Object {
      "color": "pink",
    }
  }
>
  <ButtonCircle
    className="md-reaction-button-wrapper"
    data-reacted={false}
    size={32}
    stopPropagation={false}
    style={
      Object {
        "color": "pink",
      }
    }
    variant="tertiary"
  >
    <Button
      className="md-button-circle-wrapper md-reaction-button-wrapper"
      color="default"
      data-reacted={false}
      onClick={[Function]}
      onPointerDown={[Function]}
      onPointerUp={[Function]}
      size={32}
      style={
        Object {
          "color": "pink",
        }
      }
      variant="tertiary"
    >
      <mdc-button
        class="md-button-circle-wrapper md-reaction-button-wrapper"
        data-reacted={false}
        onPointerDown={[Function]}
        onPointerUp={[Function]}
        style={
          Object {
            "color": "pink",
          }
        }
        suppressHydrationWarning={true}
      >
        <Reaction
          name="haha"
        >
          <div
            className="md-reaction-wrapper md-icon-scales md-reaction-loading"
            data-scale={12}
          >
            <Animation
              data-name="haha"
              name="haha"
              onError={[Function]}
              onLoad={[Function]}
            >
              <mdc-animation
                data-name="haha"
                suppressHydrationWarning={true}
              />
            </Animation>
            <LoadingSpinner
              aria-hidden={true}
              scale={12}
              variant="button"
            >
              <div
                aria-hidden={true}
                className="md-loading-spinner-wrapper"
                role="img"
              >
                <Spinner
                  inverted={false}
                  style={
                    Object {
                      "--mdc-spinner-size": "0.75rem",
                    }
                  }
                  variant="button"
                >
                  <mdc-spinner
                    style={
                      Object {
                        "--mdc-spinner-size": "0.75rem",
                      }
                    }
                    suppressHydrationWarning={true}
                  />
                </Spinner>
              </div>
            </LoadingSpinner>
          </div>
        </Reaction>
      </mdc-button>
    </Button>
  </ButtonCircle>
</ReactionButton>
`;
